--- a/experiments/blanca_ignition_test.yml
+++ b/experiments/blanca_ignition_test.yml
@@ -1,4 +1,5 @@
 train:
+  model_type: "QCNN"
   accelerator: "gpu"
   devices: 1
   max_epochs: 1
@@ -7,7 +8,6 @@ train:
   enable_checkpointing: False
 
 model:
-  conv_type: "quadrature"
   point_dim: 2
   latent_dim: 25
   point_seq : [25, 10, 5]
@@ -15,7 +15,7 @@ model:
   mlp_channels : [8, 8]
 
 data:
-  data_dir: "data/ignition"
+  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition"
   dimension: 2
   batch_size: 128
   size: 25
