--- a/experiments/ignition_center_cut.yml
+++ b/experiments/ignition_center_cut.yml
@@ -1,23 +1,34 @@
+#PT Lightning trainer arguments
 train:
-  accelerator: "gpu"
+  accelerator: "gpu" #str e.g. "gpu"
   devices: 1
-  max_epochs: 1
-  logger: False
-  max_steps: 1
-  enable_checkpointing: False
+  # num_nodes: #int
+  # auto_scale_batch_size: #bool
+  # auto_select_gpus: #bool
+  enable_checkpointing: True #bool
+  check_val_every_n_epoch: 1 #int
+  default_root_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv" #str
+  logger: True #bool
+  log_every_n_steps: 1 #int
+  enable_progress_bar: True #bool
+  # profiler: #str
+  max_epochs: 1 #int
+  # max_steps: #int
 
+#Model building arguments
 model:
-  conv_type: "quadrature"
-  point_dim: 2
-  latent_dim: 25
-  point_seq : [25, 10, 5]
-  channel_seq : [1, 8, 16]
-  mlp_channels : [8, 8]
+  conv_type: "quadrature" #str "standard" or "quadrature"
+  point_dim: 2 #int
+  latent_dim: 25 #int
+  point_seq: [25, 10, 5] #list
+  channel_seq: [1, 8, 16] #list
+  mlp_channels: [8, 8] #list
 
+#Data loader arguments
 data:
-  data_dir: "data/ignition"
-  dimension: 2
-  batch_size: 128
-  size: 25
-  stride: 25
-  channels: [0]
+  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_center_cut" #str
+  dimension: 2 #int
+  batch_size: 128 #int
+  size: 25 #int
+  stride: 25 #int
+  channels: [0] #list
