--- a/experiments/ignition_cnn.yml
+++ b/experiments/ignition_cnn.yml
@@ -5,30 +5,35 @@ train:
   # num_nodes: #int
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  enable_checkpointing: True #bool
+  enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
-  default_root_dir: "$SLURM_SCRATCH" #str
+  default_root_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv" #str
   logger: True #bool
-  # log_every_n_steps: #int
+  log_every_n_steps: 1 #int
   enable_progress_bar: True #bool
   # profiler: #str
-  # max_epochs: #int
+  max_epochs: 1 #int
   # max_steps: #int
 
 #Model building arguments
 model:
-  conv_type: "quadrature" #str "standard" or "quadrature"
+  conv_type: "standard" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 25 #int
   point_seq: [25, 10, 5] #list
   channel_seq: [1, 8, 16] #list
-  mlp_channels: [8, 8] #list
 
 #Data loader arguments
 data:
-  data_dir: "$SLURM_SCRATCH" #str
+  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_center_cut" #str
   dimension: 2 #int
   batch_size: 128 #int
   size: 25 #int
   stride: 25 #int
+  flatten: False
   channels: [0] #list
+
+#Extra arguments
+extra:
+  make_gif: True #bool
+  early_stopping: True #bool
