--- a/experiments/blanca_ignition_qcnn.yml
+++ b/experiments/blanca_ignition_qcnn.yml
@@ -7,7 +7,7 @@ train:
   # auto_select_gpus: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
-  default_root_dir: "$SLURM_SCRATCH" #str
+  default_root_dir: ${SLURM_SCRATCH} #str
   logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
@@ -26,14 +26,15 @@ model:
 
 #Data loader arguments
 data:
-  data_dir: "$SLURM_SCRATCH" #str
+  data_dir: ${SLURM_SCRATCH} #str
   dimension: 2 #int
   batch_size: 128 #int
   size: 25 #int
   stride: 25 #int
+  flatten: True #bool, flatten for quadrature
   channels: [1] #list
 
 #Extra arguments
 extra:
-  make_gif: False #bool
+  make_gif: True #bool
   early_stopping: True #bool
