--- a/experiments/blanca_ignition_qcnn.yml
+++ b/experiments/blanca_ignition_qcnn.yml
@@ -12,29 +12,29 @@ train:
   # log_every_n_steps: #int
   enable_progress_bar: False #bool
   # profiler: #str
-  # max_epochs: #int
+  max_epochs: 500 #int
   # max_steps: #int
 
 #Model building arguments
 model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
-  latent_dim: 25 #int
-  point_seq: [25, 10, 5] #list
-  channel_seq: [1, 8, 16] #list
-  mlp_channels: [8, 8] #list
+  latent_dim: 10 #int
+  point_seq: [25, 20, 15, 10, 5] #list
+  channel_seq: [1, 2, 4, 8, 16] #list
+  mlp_channels: [8, 8, 8, 8] #list
 
 #Data loader arguments
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 128 #int
-  size: 25 #int
-  stride: 25 #int
+  batch_size: 6 #int
+  size: 250 #int
+  stride: 250 #int
   flatten: True #bool, flatten for quadrature
   channels: [1] #list
 
 #Extra arguments
 extra:
   make_gif: True #bool
-  early_stopping: True #bool
+  early_stopping: False #bool
