--- a/experiments/ignition_qcnn.yml
+++ b/experiments/ignition_qcnn.yml
@@ -13,13 +13,13 @@ train:
   enable_progress_bar: True #bool
   # profiler: #str
   max_epochs: 1 #int
-  # max_steps: #int
+  max_steps: 1 #int
 
 #Model building arguments
 model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
-  latent_dim: 25 #int
+  latent_dim: 10 #int
   point_seq: [25, 10, 5] #list
   channel_seq: [1, 8, 16] #list
   mlp_channels: [8, 8] #list
@@ -27,7 +27,7 @@ model:
 
 #Data loader arguments
 data:
-  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_center_cut" #str
+  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
   dimension: 2 #int
   batch_size: 128 #int
   size: 25 #int
