--- a/experiments/ignition_qcnn.yml
+++ b/experiments/ignition_qcnn.yml
@@ -9,7 +9,7 @@ train:
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: False #bool
-  log_every_n_steps: 1 #int
+  # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
   max_epochs: 1 #int
@@ -20,17 +20,17 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [25, 10, 5] #list
-  channel_seq: [1, 8, 16] #list
-  mlp_channels: [8, 8] #list
+  point_seq: [50, 25, 15, 10, 5] #list
+  channel_seq: [1, 2, 4, 8, 16] #list
+  mlp_channels: [8, 8, 8] #list
   use_bias: False #bool
 
 #Data loader arguments
 data:
   data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
   dimension: 2 #int
-  batch_size: 128 #int
-  size: 25 #int
+  batch_size: 512 #int
+  size: 50 #int
   stride: 25 #int
   flatten: True #bool, flatten for quadrature
   channels: [1] #list
