--- a/experiments/blanca_ignition_qcnn_tiled.yml
+++ b/experiments/blanca_ignition_qcnn_tiled.yml
@@ -9,7 +9,7 @@ train:
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  # log_every_n_steps: #int
+  # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
   # profiler: #str
   max_epochs: 1000 #int
