--- a/experiments/ignition_cnn.yml
+++ b/experiments/ignition_cnn.yml
@@ -8,7 +8,7 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
@@ -29,7 +29,7 @@ data:
   dimension: 2 #int
   batch_size: 512 #int
   size: 50 #int
-  stride: 25 #int
+  stride: 50 #int
   flatten: False
   channels: [1] #list
 
