--- a/experiments/blanca_ignition_cnn_full.yml
+++ b/experiments/blanca_ignition_cnn_full.yml
@@ -12,7 +12,7 @@ train:
   # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
   # profiler: #str
-  max_epochs: 1000 #int
+  max_epochs: 1500 #int
   # max_steps: #int
 
 #Model building arguments
@@ -22,6 +22,8 @@ model:
   latent_dim: 10 #int
   point_seq: [250, 200, 150, 100, 50] #list
   channel_seq: [1, 2, 4, 8, 16] #list
+  learning_rate: 0.001
+  noise_scale: 0.001
 
 #Data loader arguments
 data:
@@ -32,6 +34,7 @@ data:
   stride: 250 #int
   flatten: False #bool, flatten for quadrature
   channels: [1] #list
+  shuffle: True
 
 #Extra arguments
 extra:
