--- a/experiments/template.yml
+++ b/experiments/template.yml
@@ -7,6 +7,7 @@ train:
   accelerator: #str e.g. "gpu"
   devices: #int
   num_nodes: #int
+  strategy: #str
   auto_scale_batch_size: #bool
   auto_select_gpus: #bool
   enable_checkpointing: #bool
