--- a/experiments/blanca_ignition_qcnn_full.yml
+++ b/experiments/blanca_ignition_qcnn_full.yml
@@ -2,6 +2,7 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
+  strategy: "ddp_find_unused_parameters_false" #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
@@ -20,10 +21,9 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [250, 200, 150, 100, 50] #list
-  channel_seq: [1, 2, 4, 8, 16] #list
-  mlp_channels: [8, 8, 8] #list
-  use_bias: False #bool
+  point_seq: [250, 100, 50, 25] #list
+  channel_seq: [1, 4, 8, 16] #list
+  mlp_channels: [8, 8] #list
 
 #Data loader arguments
 data:
