--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - torchvision
   - cudatoolkit=11.3
   - pytorch-lightning=1.6
+  - fairscale
   - scipy
   - yaml
   - matplotlib
