--- a/experiments/ignition_qcnn.yml
+++ b/experiments/ignition_qcnn.yml
@@ -20,16 +20,15 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [250, 100, 50, 25, 10] #list
-  channel_seq: [1, 2, 4, 8, 16] #list
+  point_seq: [250, 100, 50, 25] #list
+  channel_seq: [1, 4, 8, 16] #list
   mlp_channels: [8, 8] #list
-  learning_rate: 0.01
 
 #Data loader arguments
 data:
   data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
   dimension: 2 #int
-  batch_size: 8 #int
+  batch_size: 2 #int
   size: 250 #int
   stride: 250 #int
   flatten: True #bool, flatten for quadrature
