--- a/experiments/ignition_cnn.yml
+++ b/experiments/ignition_cnn.yml
@@ -8,34 +8,34 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 1 #int
-  max_steps: 1 #int
+  max_epochs: 10 #int
+  # max_steps: #int
 
 #Model building arguments
 model:
   conv_type: "standard" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [250, 100, 50, 25, 10] #list
-  channel_seq: [1, 2, 4, 8, 16] #list
+  point_seq: [50, 25, 10, 5] #list
+  channel_seq: [1, 2, 4, 8] #list
   learning_rate: 0.01
 
 #Data loader arguments
 data:
   data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
   dimension: 2 #int
-  batch_size: 2 #int
-  size: 250 #int
-  stride: 250 #int
+  batch_size: 512 #int
+  size: 50 #int
+  stride: 25 #int
   flatten: False
   channels: [1] #list
   shuffle: True
 
 #Extra arguments
 extra:
-  make_gif: False #bool
+  make_gif: True #bool
   early_stopping: False #bool
