--- a/experiments/ignition_qcnn_full.yml
+++ b/experiments/ignition_qcnn_full.yml
@@ -22,15 +22,15 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [250, 100, 50, 25] #list
-  channel_seq: [1, 4, 8, 16] #list
+  point_seq: [250, 50, 10] #list
+  channel_seq: [1, 2, 4] #list
   mlp_channels: [8, 8] #list
 
 #Data loader arguments
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 8 #int
+  batch_size: 4 #int
   size: 250 #int
   stride: 250 #int
   flatten: True #bool, flatten for quadrature
