Lots of various changes. Right now I am working on cleaning up the quadconv operator and making performance improvements.

--- a/experiments/ignition_cnn_tiled.yml
+++ b/experiments/ignition_cnn_tiled.yml
@@ -2,6 +2,7 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
+  strategy: "ddp_sharded" #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
