A bunch of big changes.

--- a/experiments/ignition_cnn_full.yml
+++ b/experiments/ignition_cnn_full.yml
@@ -6,16 +6,12 @@ train:
   # precision: #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
-  # auto_select_gpus: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
-  # profiler: #str
   max_epochs: 2000 #int
-  # max_steps: #int
 
 #Model building arguments
 model:
@@ -24,6 +20,7 @@ model:
   latent_dim: 10 #int
   point_seq: [250, 100, 50, 25, 10] #list
   channel_seq: [1, 4, 8, 16, 32] #list
+  learning_rate: 0.01
 
 #Data loader arguments
 data:
