--- a/experiments/ignition_cnn_tiled.yml
+++ b/experiments/ignition_cnn_tiled.yml
@@ -4,17 +4,14 @@ train:
   devices: -1
   strategy: "ddp_sharded" #str
   # num_nodes: #int
+  # precision: #str
   # auto_scale_batch_size: #bool
-  # auto_select_gpus: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
-  # profiler: #str
   max_epochs: 1000 #int
-  # max_steps: #int
 
 #Model building arguments
 model:
@@ -23,6 +20,7 @@ model:
   latent_dim: 10 #int
   point_seq: [50, 25, 15, 10, 5] #list
   channel_seq: [1, 2, 4, 8, 16] #list
+  learning_rate: 0.01
 
 #Data loader arguments
 data:
@@ -33,6 +31,7 @@ data:
   stride: 25 #int
   flatten: False #bool, flatten for quadrature
   channels: [1] #list
+  shuffle: False
 
 #Extra arguments
 extra:
