--- a/experiments/ignition_qcnn_full.yml
+++ b/experiments/ignition_qcnn_full.yml
@@ -3,19 +3,15 @@ train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
   strategy: "ddp_sharded" #str
-  # precision: #str
   # num_nodes: #int
+  # precision: #str
   # auto_scale_batch_size: #bool
-  # auto_select_gpus: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
-  # profiler: #str
   max_epochs: 2000 #int
-  # max_steps: #int
 
 #Model building arguments
 model:
@@ -25,6 +21,7 @@ model:
   point_seq: [250, 50, 10] #list
   channel_seq: [1, 2, 4] #list
   mlp_channels: [8, 8] #list
+  learning_rate: 0.01
 
 #Data loader arguments
 data:
