--- a/experiments/ignition_cnn_center.yml
+++ b/experiments/ignition_cnn_center.yml
@@ -2,18 +2,16 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
+  strategy: "ddp_sharded" #string
   # num_nodes: #int
+  # precision: #str
   # auto_scale_batch_size: #bool
-  # auto_select_gpus: #bool
-  enable_checkpointing: False #bool
+  enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  # log_every_n_steps: #int
   enable_progress_bar: True #bool
-  # profiler: #str
-  max_epochs: 2 #int
-  # max_steps: #int
+  max_epochs: 2000 #int
 
 #Model building arguments
 model:
@@ -21,19 +19,19 @@ model:
   point_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [50, 25, 10, 5] #list
-  channel_seq: [1, 2, 4, 8] #list
+  channel_seq: [1, 4, 8, 16] #list
   learning_rate: 0.01
 
 #Data loader arguments
 data:
-  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
+  # data_dir: #str
   dimension: 2 #int
   batch_size: 512 #int
   size: 50 #int
-  stride: 25 #int
+  stride: 50 #int
   flatten: False
   channels: [1] #list
-  shuffle: True
+  shuffle: False
 
 #Extra arguments
 extra:
