--- a/experiments/ignition_qcnn_center.yml
+++ b/experiments/ignition_qcnn_center.yml
@@ -2,39 +2,38 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
+  strategy: "ddp_sharded" #str
   # num_nodes: #int
+  # precision: #str
   # auto_scale_batch_size: #bool
-  # auto_select_gpus: #bool
-  enable_checkpointing: False #bool
+  enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
-  logger: False #bool
-  # log_every_n_steps: #int
-  enable_progress_bar: True #bool
-  # profiler: #str
-  max_epochs: 1 #int
-  max_steps: 1 #int
+  logger: True #bool
+  enable_progress_bar: False #bool
+  max_epochs: 2000 #int
 
 #Model building arguments
 model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [250, 100, 50, 25] #list
+  point_seq: [50, 25, 10, 5] #list
   channel_seq: [1, 4, 8, 16] #list
   mlp_channels: [8, 8] #list
+  learning_rate: 0.01
 
 #Data loader arguments
 data:
-  data_dir: "/home/rs-coop/Documents/Research/ASCR-Compression/QuadConv/data/ignition_square" #str
+  # data_dir: #str
   dimension: 2 #int
-  batch_size: 2 #int
-  size: 250 #int
-  stride: 250 #int
+  batch_size: 128 #int
+  size: 50 #int
+  stride: 50 #int
   flatten: True #bool, flatten for quadrature
   channels: [1] #list
 
 #Extra arguments
 extra:
-  make_gif: False #bool
+  make_gif: True #bool
   early_stopping: False #bool
