--- a/experiments/ignition_qcnn_tiled_profile.yml
+++ b/experiments/ignition_qcnn_tiled_profile.yml
@@ -7,14 +7,14 @@ train:
   # num_nodes: #int
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  enable_checkpointing: True #bool
+  enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: False #bool
   # log_every_n_steps: 1 #int
   enable_progress_bar: False #bool
   profiler: "simple" #str
-  max_epochs: 1 #int
+  max_epochs: 2 #int
   # max_steps: #int
 
 #Model building arguments
@@ -23,15 +23,15 @@ model:
   point_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [50, 25, 15, 10, 5] #list
-  channel_seq: [1, 4, 8, 16, 32] #list
-  mlp_channels: [8, 8, 8] #list
+  channel_seq: [1, 2, 4, 8, 16] #list
+  mlp_channels: [4, 4] #list
   use_bias: False #bool
 
 #Data loader arguments
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 256 #int
+  batch_size: 512 #int
   size: 50 #int
   stride: 25 #int
   flatten: True #bool, flatten for quadrature
