--- a/experiments/ignition_cnn_center.yml
+++ b/experiments/ignition_cnn_center.yml
@@ -10,7 +10,7 @@ train:
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
   logger: True #bool
-  enable_progress_bar: True #bool
+  enable_progress_bar: False #bool
   max_epochs: 2000 #int
 
 #Model building arguments
@@ -26,7 +26,7 @@ model:
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 512 #int
+  batch_size: 128 #int
   size: 50 #int
   stride: 50 #int
   flatten: False
