--- a/experiments/ignition_cnn_center.yml
+++ b/experiments/ignition_cnn_center.yml
@@ -2,7 +2,7 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  strategy: "ddp_sharded" #string
+  # strategy: "ddp_sharded" #string
   # num_nodes: #int
   # precision: #str
   # auto_scale_batch_size: #bool
@@ -11,15 +11,15 @@ train:
   # default_root_dir: #str
   logger: True #bool
   enable_progress_bar: False #bool
-  max_epochs: 2000 #int
+  max_epochs: 5000 #int
 
 #Model building arguments
 model:
   conv_type: "standard" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [50, 25, 10, 5] #list
-  channel_seq: [1, 4, 8, 16] #list
+  point_seq: [50, 30, 20, 10, 5] #list
+  channel_seq: [1, 4, 8, 16, 32] #list
   learning_rate: 0.01
 
 #Data loader arguments
