--- a/experiments/ignition_qcnn_center.yml
+++ b/experiments/ignition_qcnn_center.yml
@@ -6,21 +6,20 @@ train:
   # num_nodes: #int
   # precision: #str
   # auto_scale_batch_size: #bool
-  enable_checkpointing: False #bool
+  enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
-  logger: False #bool
+  logger: True #bool
   enable_progress_bar: False #bool
-  max_epochs: 2000 #int
-  max_steps: 1
+  max_epochs: 5000 #int
 
 #Model building arguments
 model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [50, 25, 10, 5] #list
-  channel_seq: [1, 4, 8, 16] #list
+  point_seq: [50, 30, 20, 10, 5] #list
+  channel_seq: [1, 4, 8, 16, 32] #list
   mlp_channels: [8, 8, 8] #list
   learning_rate: 0.01
 
@@ -36,5 +35,5 @@ data:
 
 #Extra arguments
 extra:
-  make_gif: False #bool
+  make_gif: True #bool
   early_stopping: False #bool
