--- a/experiments/ignition_qcnn_center.yml
+++ b/experiments/ignition_qcnn_center.yml
@@ -2,9 +2,9 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  # strategy: "ddp_sharded" #str
+  strategy: "ddp_sharded" #str
   # num_nodes: #int
-  # precision: #str
+  precision: 16 #str
   # auto_scale_batch_size: #bool
   enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
@@ -18,7 +18,7 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [50, 30, 20, 10, 5] #list
+  point_seq: [50, 25, 15, 10, 5] #list
   channel_seq: [1, 4, 8, 16, 32] #list
   mlp_channels: [8, 8, 8] #list
   learning_rate: 0.01
@@ -27,7 +27,7 @@ model:
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 64 #int
+  batch_size: 32 #int
   size: 50 #int
   stride: 50 #int
   flatten: True #bool, flatten for quadrature
