--- a/experiments/ignition_qcnn_profile.yml
+++ b/experiments/ignition_qcnn_profile.yml
@@ -3,7 +3,7 @@ train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
   strategy: "ddp_sharded" #str
-  # precision
+  precision: 16 #int
   # num_nodes: #int
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
@@ -23,7 +23,7 @@ model:
   point_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [50, 25, 15, 10, 5] #list
-  channel_seq: [1, 2, 4, 8, 16] #list
+  channel_seq: [1, 4, 8, 16, 32] #list
   mlp_channels: [4, 4] #list
   use_bias: False #bool
 
@@ -31,9 +31,9 @@ model:
 data:
   # data_dir: #str
   dimension: 2 #int
-  batch_size: 512 #int
+  batch_size: 128 #int
   size: 50 #int
-  stride: 25 #int
+  stride: 50 #int
   flatten: True #bool, flatten for quadrature
   channels: [1] #list
 
