--- a/experiments/template.yml
+++ b/experiments/template.yml
@@ -30,7 +30,7 @@ model:
   channel_seq: #list
   mlp_channels: #list, delete this for standard conv
   optimizer: #str
-  learning_rate: #foat
+  learning_rate: #float
 
 #PT LightningDataModule arguments
 data:
@@ -41,6 +41,7 @@ data:
   stride: #int
   flatten: #bool, flatten for quadrature
   channels: #list
+  shuffle: #bool
 
 #Extra arguments
 extra:
