--- a/experiments/ignition_qcnn_update.yml
+++ b/experiments/ignition_qcnn_update.yml
@@ -16,9 +16,9 @@ train:
   # default_root_dir: #str
   logger: True #bool
   # log_every_n_steps: #int
-  # enable_progress_bar: #bool
+  enable_progress_bar: False #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 5000 #int
   # max_steps: #int
 
 #Model arguments
@@ -26,14 +26,14 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [2500, 625, 100] #list
-  channel_seq: [1, 4, 16] #list
+  point_seq: [2500, 900, 625, 100] #list
+  channel_seq: [1, 4, 16, 32] #list
   optimizer: "adam" #str
   learning_rate: 0.01 #foat
 
 #PT LightningDataModule arguments
 data:
-  data_dir: "data/ignition_center_cut" #str
+  # data_dir: "data/ignition_center_cut" #str
   dimension: 2 #int
   batch_size: 16 #int
   size: 50 #int
@@ -43,5 +43,5 @@ data:
 
 #Extra arguments
 extra:
-  make_gif: False #bool
+  make_gif: True #bool
   early_stopping: False #bool
