--- a/experiments/template.yml
+++ b/experiments/template.yml
@@ -28,7 +28,7 @@ model:
   latent_dim: #int
   point_seq: #list
   channel_seq: #list
-  mlp_channels: #list, delete this for standard conv
+  filter_size: #list, delete this for standard conv
   optimizer: #str
   learning_rate: #foat
 
