--- a/experiments/test.yaml
+++ b/experiments/test.yaml
@@ -11,14 +11,14 @@ train:
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  # enable_checkpointing: #bool
+  enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
-  # default_root_dir: #str
+  default_root_dir: "./lightning_logs" #str
   logger: True #bool
   # log_every_n_steps: #int
-  enable_progress_bar: False #bool
+  enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 5000 #int
+  max_epochs: 1 #int
   # max_steps: #int
 
 #Model arguments
@@ -27,15 +27,15 @@ model:
   point_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [2500, 900, 625, 100] #list
-  channel_seq: [1, 4, 16, 32] #list
-  filter_size: [4,4] #list
+  channel_seq: [1, 2, 3, 4] #list
+  filter_size: [4, 4] #list
   optimizer: "adam" #str
   learning_rate: 0.01 #foat
 
 #PT LightningDataModule arguments
 data:
-  # data_dir: "data/ignition_center_cut" #str
-  dimension: 2 #int
+  data_dir: "data/ignition_center_cut" #str
+  point_dim: 2 #int
   batch_size: 16 #int
   size: 50 #int
   stride: 50 #int
@@ -44,5 +44,5 @@ data:
 
 #Extra arguments
 extra:
-  make_gif: True #bool
+  make_gif: False #bool
   early_stopping: False #bool
