--- a/experiments/ignition_qcnn_update.yaml
+++ b/experiments/ignition_qcnn_update.yaml
@@ -11,7 +11,7 @@ train:
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  enable_checkpointing: False #bool
+  enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
   logger: True #bool
@@ -28,7 +28,7 @@ model:
   latent_dim: 10 #int
   point_seq: [2500, 900, 625, 100] #list
   channel_seq: [1, 4, 16, 32] #list
-  filter_size: [4, 4] #list
+  filter_size: [8, 8] #list
   optimizer: "adam" #str
   learning_rate: 0.01 #foat
 
@@ -36,7 +36,7 @@ model:
 data:
   # data_dir: "data/ignition_center_cut" #str
   point_dim: 2 #int
-  batch_size: 16 #int
+  batch_size: 64 #int
   size: 50 #int
   stride: 50 #int
   flatten: True #bool, flatten for quadrature
