Mostly a lot of rearranging things and setting up a local development file.

--- a/experiments/ignition_qcnn_update.yaml
+++ b/experiments/ignition_qcnn_update.yaml
@@ -28,7 +28,7 @@ model:
   latent_dim: 10 #int
   point_seq: [2500, 900, 625, 625, 100] #list
   channel_seq: [1, 4, 16, 16, 32] #list
-  filter_size: [8, 8, 8] #list
+  filter_seq: [8, 8, 8] #list
   optimizer: "adam" #str
   learning_rate: 0.01 #foat
 
