--- a/experiments/template.yaml
+++ b/experiments/template.yaml
@@ -28,7 +28,7 @@ model:
   latent_dim: #int
   point_seq: #list
   channel_seq: #list
-  filter_size: #list, delete this for standard conv
+  filter_seq: #list, delete this for standard conv
   optimizer: #str
   learning_rate: #foat
 
