new experiment files for new hyperparam outfit

--- a/experiments/basic1D/basic1D_maxskip_cnn.yml
+++ b/experiments/basic1D/basic1D_maxskip_cnn.yml
@@ -21,11 +21,15 @@ model:
   stages: 2
   learning_rate: 0.01
   noise_scale : 0.0
+  
+  conv_type: "standard" #str "standard" or "quadrature"
 
   conv_params:
-    conv_type: "standard" #str "standard" or "quadrature"
-    channel_seq: [8, 8, 8] #list
-    point_seq: [100, 50, 25]
+    kernel_size: [3] #list
+    in_channels: [1, 32, 32] #list of length == stages+1 
+    out_channels: [32, 32, 32] #list of length == stages+1 or length == 1
+    bias: [False, True, True] #list of length == stages+1 or length == 1
+    padding: ['same']
 
 #Data loader arguments
 data:
