--- a/experiments/test.yaml
+++ b/experiments/test.yaml
@@ -14,7 +14,7 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: True #bool
+  logger: False #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
@@ -46,6 +46,6 @@ data:
 
 #Extra arguments
 extra:
-  make_gif: True #bool
+  make_gif: False #bool
   compute_stats: True #bool
   early_stopping: False #bool
