--- a/experiments/ignition/cnn_full.yaml
+++ b/experiments/ignition/cnn_full.yaml
@@ -2,7 +2,7 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  strategy: "ddp" #str
+  strategy: "ddp_sharded" #str
   # precision: #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
@@ -15,11 +15,7 @@ train:
 
 #Model building arguments
 model:
-<<<<<<<< HEAD:experiments/ignition/ignition_cnn_full.yml
-  model_type: original_model
-========
   module: "skip" #str, encoder and decoder
->>>>>>>> cooper:experiments/ignition/cnn_full.yaml
   conv_type: "standard" #str "standard" or "quadrature"
   point_dim: 2 #int
   latent_dim: 10 #int
