--- a/experiments/basic1D/basic1D_maxskip_cnn.yaml
+++ b/experiments/basic1D/basic1D_maxskip_cnn.yaml
@@ -15,18 +15,18 @@ train:
 
 #Model building arguments
 model:
-  model_type: maxskip
-  dimension: 1 #int dimension of the convolution in the CNN
+  module: "maxskip"
+  spatial_dim: 1 #int dimension of the convolution in the CNN
   latent_dim: 10 #int
   stages: 2
   learning_rate: 0.01
   noise_scale : 0.0
-  
+
   conv_type: "standard" #str "standard" or "quadrature"
 
   conv_params:
     kernel_size: [3] #list
-    in_channels: [1, 32, 32] #list of length == stages+1 
+    in_channels: [1, 32, 32] #list of length == stages+1
     out_channels: [32, 32, 32] #list of length == stages+1 or length == 1
     bias: [False, True, True] #list of length == stages+1 or length == 1
     padding: ['same']
@@ -34,7 +34,7 @@ model:
 #Data loader arguments
 data:
   data_dir: "C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\data\\simple_transport" #str
-  dimension: 1 #int
+  spatial_dim: 1 #int
   batch_size: 16 #int
   size: 100 #int
   stride: 100 #int
