--- a/experiments/ignition/cnn_tiled.yaml
+++ b/experiments/ignition/cnn_tiled.yaml
@@ -17,7 +17,7 @@ train:
 model:
   module: "skip" #str, encoder and decoder
   conv_type: "standard" #str "standard" or "quadrature"
-  point_dim: 2 #int
+  spatial_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [50, 25, 15, 10, 5] #list
   channel_seq: [1, 2, 4, 8, 16] #list
@@ -26,7 +26,7 @@ model:
 #Data loader arguments
 data:
   # data_dir: #str
-  point_dim: 2 #int
+  spatial_dim: 2 #int
   batch_size: 512 #int
   size: 50 #int
   stride: 25 #int
