--- a/experiments/tests/test_maxskip.yaml
+++ b/experiments/tests/test_maxskip.yaml
@@ -2,16 +2,16 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  strategy: "ddp" #str
+  # strategy: "ddp" #str
   # precision: #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
-  enable_checkpointing: True #bool
+  enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   # default_root_dir: #str
-  logger: True #bool
+  logger: False #bool
   enable_progress_bar: True #bool
-  max_epochs: 100 #int
+  max_epochs: 1 #int
 
 #Model building arguments
 model:
@@ -30,12 +30,12 @@ model:
     filter_seq: [[8,8,8]]
     in_channels: [1, 16, 16] #list of length == stages+1
     out_channels: [16, 16, 16] #list of length == stages+1 or length == 1
-    bias: [False, True, True] #list of length == stages+1 or length == 1
-    mlp_mode: ['share_in']
+    use_bias: [False, True, True] #list of length == stages+1 or length == 1
+    # mlp_mode: ['share_in']
 
 #Data loader arguments
 data:
-  data_dir: "C:\\Users\\Kevin\\Google Drive\\Research\\QuadConv\\data\\simple_transport" #str
+  data_dir: "data/simple_transport" #str
   spatial_dim: 1 #int
   batch_size: 16 #int
   size: 100 #int
@@ -43,7 +43,7 @@ data:
   flatten: True #bool, flatten for quadrature
   channels: [0] #list
   shuffle: True
-  num_workers: 12
+  num_workers: 4
 
 #Extra arguments
 extra:
