--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -25,7 +25,7 @@ train:
 model:
   module: "skip" #str, encoder and decoder
   conv_type: "quadrature" #str "standard" or "quadrature"
-  point_dim: 2 #int
+  spatial_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [2500, 900, 625, 100] #list
   channel_seq: [1, 2, 3, 4] #list
@@ -37,7 +37,7 @@ model:
 #PT LightningDataModule arguments
 data:
   data_dir: "data/ignition_center_cut" #str
-  point_dim: 2 #int
+  spatial_dim: 2 #int
   batch_size: 16 #int
   size: 50 #int
   stride: 50 #int
