Fixing hyperparameter saving so that model loading works.

--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -48,6 +48,6 @@ data:
 
 #Extra arguments
 misc:
-  make_gif: True #bool
+  make_gif: False #bool
   compute_stats: False #bool
   early_stopping: False #bool
