--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -11,10 +11,10 @@ train:
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  enable_checkpointing: True #bool
+  enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: True #bool
+  logger: False #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
@@ -27,26 +27,25 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [2500, 900, 576, 100] #list
-  channel_seq: [1, 2, 3, 4] #list
+  point_seq: [2500, 100] #list
+  channel_seq: [1, 2] #list
   filter_seq: [4, 4] #list
   optimizer: "Adam" #str
   learning_rate: 0.01 #float
   use_bias: True
-  quad_mode: "implicit"
-  loss_fn: "SobolevLoss"
+  loss_fn: "MSELoss"
 
 #PT LightningDataModule arguments
 data:
-  data_dir: "data/ignition_center_cut" #str
+  module: "unstructured_data"
+  data_dir: "data/unstructured_ignition_center_cut" #str
   spatial_dim: 2 #int
+  num_points: 2500 #int
   batch_size: 16 #int
-  size: 50 #int
-  flatten: True #bool, flatten for quadrature
   channels: [1] #list
 
 #Extra arguments
 misc:
-  make_gif: True #bool
+  make_gif: False #bool
   compute_stats: False #bool
   early_stopping: False #bool
