--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -14,7 +14,7 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: True #bool
+  logger: False #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
@@ -30,10 +30,11 @@ model:
   point_seq: [2500, 100] #list
   channel_seq: [1, 2] #list
   filter_seq: [4, 4] #list
-  optimizer: "Adam" #str
+  optimizer: "AdamW" #str
   learning_rate: 0.01 #float
-  use_bias: True
+  use_bias: False
   loss_fn: "MSELoss"
+  noise_scale: 0.001
 
 #PT LightningDataModule arguments
 data:
@@ -46,6 +47,6 @@ data:
 
 #Extra arguments
 misc:
-  make_gif: True #bool
-  compute_stats: True #bool
+  make_gif: False #bool
+  compute_stats: False #bool
   early_stopping: False #bool
