--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -14,11 +14,11 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 1 #int
+  max_epochs: 50 #int
   # max_steps: #int
 
 #Model arguments
@@ -27,26 +27,26 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [2500, 64] #list
+  point_seq: [1740, 64] #list
   channel_seq: [1, 2] #list
   filter_seq: [4, 4] #list
   optimizer: "AdamW" #str
   learning_rate: 0.01 #float
   use_bias: False
   loss_fn: "MSELoss"
-  noise_scale: 0.001
+  # noise_scale: 0.001
 
 #PT LightningDataModule arguments
 data:
   module: "unstructured_data"
   data_dir: "data/unstructured_ignition_center_cut" #str
   spatial_dim: 2 #int
-  num_points: 2500 #int
+  num_points: 1740 #int
   batch_size: 16 #int
-  channels: [1] #list
+  channels: [0] #list
 
 #Extra arguments
 misc:
-  make_gif: False #bool
+  make_gif: True #bool
   compute_stats: False #bool
   early_stopping: False #bool
