Fixing the bump function.

--- a/experiments/tests/test_skip.yaml
+++ b/experiments/tests/test_skip.yaml
@@ -48,5 +48,5 @@ data:
 #Extra arguments
 misc:
   make_gif: False #bool
-  compute_stats: True #bool
+  compute_stats: False #bool
   early_stopping: False #bool
